# gl-procamp-concurrency

practical_tasks/atm_apdx_c/: Makefile  atm.cpp  atm.h  atm_msg.h  bank.h  dispatcher.h  interface_machine.h  msg_queue.h  runner.cpp  sender_receiver.h  sender_receiving.h  template_dispatcher.h
practical_tasks/dining_philosophers/: CMakeLists.txt  README.md  build.sh  jenkins.sh  prepare.py
practical_tasks/dining_philosophers/project/: dining_philosophers.cpp  dining_philosophers.h  dining_philosophers_mt.cpp
practical_tasks/dining_philosophers/test/: dining_philosophers_gTest.cpp
practical_tasks/thread_mgm/: CMakeLists.txt  README.md  build.sh
practical_tasks/thread_mgm/project/: accumulate_list.h  accumulate_list_common.cpp  accumulate_list_mt.cpp  accumulate_list_st.cpp  counter.h  counter_mt.cpp  counter_st.cpp  time_logger.cpp  time_logger.h  words_count.h  words_count_common.cpp  words_count_common.h  words_count_mt.cpp  words_count_st.cpp  words_count_st_runner.cpp
practical_tasks/thread_mgm/test/: mt_task_gTest.cpp
practical_tasks/thread_pool_aw_ch09/: Makefile  joiner.h  thread_pool_simple.cpp  thread_safe_queue_revised.h
slides_sharing_data/: Makefile  big_buff_deadlock.cpp  counter_non_atomic.cpp  shared_mutex_sample.cpp  timed_mutex_sample.cpp
slides_thread_mgm/: Makefile  this_thread.cpp  thread_raii.cpp  tls.cpp
topic_performance/: Makefile  branch_prediction.cpp  false_sharing_intel.cpp  false_sharing_solved.cpp  run.sh  time_logger.cpp  time_logger.h
